fix body overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -77,7 +77,7 @@ $link-hover-decoration: none !default;
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   overflow-x: hidden;
   background: rgb(223, 223, 223);
